--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -231,18 +231,37 @@ jobs:
   run-migrations:
     docker:
       # Docker image here that supports NodeJS
+      - image: cimg/node:13.8.0
     steps:
       # Checkout code from git
       - run:
           name: Run migrations
           command: |
             # Your code here
-            exit 1
+            sudo apt-get update
+            sudo apt-get install awscli -y
+            # exit 1
       - run:
           name: Send migration results to memstash
           command: |
             # Your code here
-            exit 1
+            cd backend
+            echo ENVIROMENT=production > ".env"
+            echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION >> ".env"
+            echo TYPEORM_MIGRATIONS_DIR=$TYPEORM_MIGRATIONS_DIR >> ".env"
+            echo TYPEORM_ENTITIES=$TYPEORM_ENTITIES >> ".env"
+            echo TYPEORM_MIGRATIONS=$TYPEORM_MIGRATIONS >> ".env"
+            echo TYPEORM_HOST=$TYPEORM_HOST >> ".env"
+            echo TYPEORM_PORT=$TYPEORM_PORT >> ".env"
+            echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> ".env"
+            echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> ".env"
+            echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> ".env"
+            npm install
+            # Run and save the migration output
+            # cat .env
+            npm run migrations > ~/project/backend/migrations_dump.txt
+            # cat migrations_dump.txt
+            # exit 1
       # Here's where you will add some code to rollback on failure
 
   deploy-frontend:
