--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -434,22 +434,21 @@ cleanup:
   steps:
     # Checkout code from git
     - checkout
+    - attach_workspace:
+          at: ~/
     - run:
         name: Get old stack workflow id
         command: |
           # your code here
           yum -y install tar gzip
-          export OLD_WORKFLOW_ID=$(aws cloudformation list-exports \
-              --query "Exports[?Name==\`WorkflowID\`].Value" 
-              --region us-east-1 \
-              --no-paginate \
-              --output text)
-          echo "Old Workflow ID: $OLD_WORKFLOW_ID"
+          export OldWorkflowID=$(aws cloudformation list-exports --query "Exports[?Name==\`WorkflowID\`].Value" --no-paginate --output text)
+          echo OldWorkflowID: "${OldWorkflowID}"
          # Export the list of stacks into an array
-        export STACKS=($(aws cloudformation list-stacks \
-          --output text \
-          --region us-east-1 \
-          --query 'StackSummaries[?(!contains(StackStatus,`DELETE`))].StackName'))
+          export STACKS=$(aws cloudformation list-stacks \
+            --query "StackSummaries[*].StackName" \
+            --stack-status-filter CREATE_COMPLETE \
+            --no-paginate \
+            --output text)
 
     - run:
         name: Remove old stacks and files
@@ -457,6 +456,9 @@ cleanup:
           if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
           then
             # your code here
+            aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+            aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
+            aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
           fi
 
 workflows:
