--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,7 @@ jobs:
             # exit 1
       - save_cache:
           paths: [frontend/node_modules]
-          keys: frontend-build
+          key: frontend-build
 
   build-backend:
     docker:
@@ -79,7 +79,7 @@ jobs:
             # exit 1
       - save_cache:
           paths: [backend/node_modules]
-          keys: backend-build
+          key: backend-build
 
   test-frontend:
     docker:
