--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -1,11 +1,10 @@
 ---
-
-- name: "configuration play." 
+- name: "configuration play."
   hosts: web
   user: ubuntu
   become: true
   become_method: sudo
-  become_user: root  
+  become_user: root
   gather_facts: false
   vars:
     - ansible_python_interpreter: /usr/bin/python3
@@ -15,14 +14,29 @@
   pre_tasks:
     - name: "wait 600 seconds for target connection to become reachable/usable."
       # Your code here
+      wait_for_connection:
+        timeout: 600
 
     - name: "install python for Ansible."
       # Your code here
+      become: true
+      raw: apt -y update && apt-get install -y python3
 
   # Get the environment variables from CircleCI and add to the EC2 instance
   environment:
-    - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"  
+    - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
     # Add more env vars here
+    - ENVIRONMENT: "production"
+    - TYPEORM_CONNECTION: "{{ lookup('env','TYPEORM_CONNECTION') }}"
+    - TYPEORM_PORT: "{{ lookup('env','TYPEORM_PORT') }}"
+    - TYPEORM_HOST: "{{ lookup('env','TYPEORM_HOST') }}"
+    - TYPEORM_USERNAME: "{{ lookup('env','TYPEORM_USERNAME') }}"
+    - TYPEORM_PASSWORD: "{{ lookup('env','TYPEORM_PASSWORD') }}"
+    - TYPEORM_DATABASE: "{{ lookup('env','TYPEORM_DATABASE') }}"
+    - TYPEORM_MIGRATIONS: "{{ lookup('env','TYPEORM_MIGRATIONS') }}"
+    - TYPEORM_ENTITIES: "{{ lookup('env','TYPEORM_ENTITIES') }}"
 
   roles:
     # Your code here
+    - configure-server
+    - configure-prometheus-node-exporter
