--- a/.circleci/ansible/deploy-backend.yml
+++ b/.circleci/ansible/deploy-backend.yml
@@ -1,6 +1,5 @@
 ---
-
-- name: "configuration play." 
+- name: "configuration play."
   hosts: web
   user: ubuntu
   gather_facts: false
@@ -8,5 +7,24 @@
     - ansible_python_interpreter: /usr/bin/python3
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
+    - ansible_ssh_common_args: "-o StrictHostKeyChecking=no"
+    - TYPEORM_MIGRATIONS: "./src/migrations/*.ts"
+    - TYPEORM_MIGRATIONS_DIR: "./src/migrations"
+    - TYPEORM_CONNECTION: "postgres"
+    - TYPEORM_ENTITIES: "./src/modules/domain/**/*.entity.ts"
+    - TYPEORM_HOST: "{{ lookup('env','TYPEORM_HOST') }}"
+    - TYPEORM_PORT: 5432
+    - TYPEORM_USERNAME: "{{ lookup('env','TYPEORM_USERNAME') }}"
+    - TYPEORM_PASSWORD: "{{ lookup('env','TYPEORM_PASSWORD') }}"
+    - TYPEORM_DATABASE: "{{ lookup('env','TYPEORM_DATABASE') }}"
+    - ENVIRONMENT: "{{ lookup('env','ENVIRONMENT') }}"
+  environment:
+    TYPEORM_CONNECTION: "{{ lookup('env','TYPEORM_CONNECTION') }}"
+    TYPEORM_HOST: "{{ lookup('env','TYPEORM_HOST') }}"
+    TYPEORM_USERNAME: "{{ lookup('env','TYPEORM_USERNAME') }}"
+    TYPEORM_PASSWORD: "{{ lookup('env','TYPEORM_PASSWORD') }}"
+    TYPEORM_DATABASE: "{{ lookup('env','TYPEORM_DATABASE') }}"
+    TYPEORM_MIGRATIONS: "{{ lookup('env','TYPEORM_MIGRATIONS') }}"
+    TYPEORM_ENTITIES: "{{ lookup('env','TYPEORM_ENTITIES') }}"
   roles:
     - deploy
